--- a/app/src/main/res/layout/activity_login_registro.xml
+++ b/app/src/main/res/layout/activity_login_registro.xml
@@ -4,7 +4,7 @@
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="onuse.com.br.uberclone.LoginRegistroActivity">
+    tools:context="onuse.com.br.uberclone.LoginRegistroMotoristaActivity">
 
     <EditText
         android:layout_width="match_parent"
