--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,16 +4,37 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/black"
+    android:gravity="bottom"
     tools:context="onuse.com.br.uberclone.MainActivity">
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:src="@drawable/ic_passageiro"/>
 
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Eu sou passageiro"
+        android:textAlignment="center"
+        android:layout_margin="5dp"
+        android:background="@android:color/white"
         android:id="@+id/btnPassageiro"/>
+
+    <ImageView
+        android:layout_width="match_parent"
+        android:layout_height="0dp"
+        android:layout_weight="1"
+        android:src="@drawable/ic_motorista"/>
+
     <Button
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Eu sou motorista"
+        android:textAlignment="center"
+        android:background="@android:color/white"
+        android:layout_margin="5dp"
         android:id="@+id/btnMotorista"/>
 </LinearLayout>
